# EchoPanel

./: .env.example  .gitignore  AGENTS.md  AGENT_START_HERE.md  CHANGELOG.md  FLOW_ATLAS.md  README.md  audit-senior-stakeholder-red-team-review.md  convert_vad_model.py  echopanel.html  echopanel_sidepanel.html  nohup.out  ocr_test_results.json  pyproject.toml  requirements..venv.snapshot.txt  temp_vad_model  test_incremental_analysis.py  test_speech.aiff
.githooks/: pre-commit
assets/: AppIcon-Pro.icns  AppIcon-v2.icns  AppIcon.icns  README.md
docs/: APP_FEATURE_AUDIT_2026-02-17.md  APP_STORE_PRIVACY_DISCLOSURE.md  APP_STORE_PRIVACY_SIMPLE.md  ARCHITECTURE.md  ASR_CONCURRENCY_PATTERNS_RESEARCH.md  ASR_ENGINE_IMPLEMENTATION_PLAN.md  ASR_IMPLEMENTATION_STATUS_2026-02-14.md  ASR_MODEL_PRELOADING_PATTERNS.md  ASR_MODEL_RESEARCH_2026-02.md  ASR_PROVIDERS_IMPLEMENTATION_SUMMARY.md  ASR_TESTING_GUIDE.md  AUDIT_BACKLOG.md  AUDIT_LOG.md  AUDIT_PLAN.md  AUDIT_PROMPTS.md  BACKEND_RESILIENCE_ANALYSIS.md  BRAIN_DUMP_CYCLE_SUMMARY.md  BRAIN_DUMP_IMPLEMENTATION_PLAN.md  BRAIN_DUMP_PHASE3_1_SUMMARY.md  BRAIN_DUMP_PHASE3_2_SPEC.md  BRAIN_DUMP_PHASE3_SPEC.md  BRAIN_DUMP_PRODUCT_VISION.md  BRAIN_DUMP_TEST_REPORT.md  BROADCAST_IMPLEMENTATION_COMPLETE.md  BROADCAST_INTEGRATION_TEST_REPORT.md  BROADCAST_PRODUCTION_READINESS_SUMMARY.md  BUILD.md  CHANGELOG.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CLAIMS.md  COMPETITIVE_ANALYSIS_MARKET_RESEARCH_2026-02-17.md  COMPLETE_PROVIDER_TESTING_2026-02-14.md  COMPLETE_PROVIDER_TESTING_FINAL_2026-02-14.md  COMPREHENSIVE_FEATURE_GAP_ANALYSIS.md  (+160 more)
(+868 files in other folders)
