[project]
name = "echopanel"
version = "0.1.0"
description = "EchoPanel v0.1 backend and tooling"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "websockets==14.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
]
asr = [
    "faster-whisper==1.0.3",
    "numpy==1.26.4",
    "requests==2.32.3",
]
diarization = [
    "pyannote.audio==3.3.0",
    "torch==2.5.1",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
exclude = ["macapp*", "docs*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
